--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,13 @@
     <a mat-icon-button (click)="join()" [disabled]="konvaService.selectedItems.length < 2">
       <mat-icon>link</mat-icon>
     </a>
+    <a mat-icon-button (click)="group()" [disabled]="konvaService.selectedItems.length < 2">
+      <mat-icon>group_work</mat-icon>
+    </a>
   </div>
 </div>
 <div class="main">
   <app-pallette (add)="add($event)"></app-pallette>
   <div id="konvaboard"></div>
+  <app-sidebar></app-sidebar>
 </div>
