--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,19 @@
 <div class="sidebar-container">
   <div class="sidebar-header">Properties</div>
-  <div class="sidebar-content"></div>
+  <div class="sidebar-content">
+    <ng-container *ngIf="selectedObject; else nothing;">
+      <div class="property-group">
+        <span class="group-label">General</span>
+        <div class="group-content">
+          <label>ID (read-only)</label>
+          <input type="text" [(ngModel)]="selectedObject.id" readonly>
+          <label>TYPE NAME</label>
+          <input type="text" [(ngModel)]="selectedObject.type">
+        </div>
+      </div>
+    </ng-container>
+    <ng-template #nothing>
+      <div class="no-selected">No item selected.</div>
+    </ng-template>
+  </div>
 </div>
