--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,12 +3,12 @@
   <div class="sidebar-content">
     <ng-container *ngIf="selectedObject; else nothing;">
       <div class="property-group">
-        <span class="group-label">General</span>
+        <span class="group-label">General<mat-icon>lock</mat-icon></span>
         <div class="group-content">
           <label>ID (read-only)</label>
-          <input type="text" [(ngModel)]="selectedObject.id" readonly>
+          <input type="text" [(ngModel)]="selectedObject.id" disabled>
           <label>TYPE NAME</label>
-          <input type="text" [(ngModel)]="selectedObject.type">
+          <input type="text" [(ngModel)]="selectedObject.type" disabled>
         </div>
       </div>
     </ng-container>
