--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -33,6 +33,12 @@
         background: #eaeaea;
         position: absolute;
         padding: 0 10px;
+        .mat-icon {
+          font-size: 12px;
+          margin-left: 5px;
+          width: 12px;
+          height: 12px;
+        }
       }
       .group-content {
         padding: 16px 0 0;
