--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <a mat-icon-button (click)="join()" [disabled]="konvaService.selectedItems.length < 2">
       <mat-icon>link</mat-icon>
     </a>
-    <a mat-icon-button (click)="group()" [disabled]="konvaService.selectedItems.length < 2">
+    <a mat-icon-button (click)="group()">
       <mat-icon>group_work</mat-icon>
     </a>
   </div>
