--- a/src/app/pallette/pallette.component.html
+++ b/src/app/pallette/pallette.component.html
@@ -4,5 +4,8 @@
     <button *ngFor="let item of types" (click)="add.emit(item)">
       <img [src]="'assets/svg/' + item.file" width="24" height="24">
     </button>
+    <button (click)="add.emit({id: 100, name: 'group', file: 'null'})">
+      <img src="assets/svg/collaboration.svg" width="24" height="24">
+    </button>
   </div>
 </div>
