--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
   box-shadow: 1px 1px 6px grey;
   margin-bottom: 10px;
   display: flex;
+  padding: 6px;
   .logo {
     display: flex;
     align-items: center;
