issue #3 - general property handling * store properties to table

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -7,8 +7,8 @@
         <div class="group-content">
           <label>ID (read-only)</label>
           <input type="text" [(ngModel)]="selectedObject.id" disabled>
-          <label>TYPE NAME</label>
-          <input type="text" [(ngModel)]="selectedObject.type" disabled>
+          <label>TYPE NAME (read-only)</label>
+          <input type="text" [(ngModel)]="selectedObject.name" disabled>
         </div>
       </div>
     </ng-container>
