--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -47,6 +47,12 @@
         input {
           margin-bottom: 5px;
         }
+        .uppercase-label {
+          text-transform: uppercase;
+        }
+        .btn-property-save {
+          margin-top: 15px;
+        }
       }
     }
   }
